# web-of-the-site

./: .gitignore  Procfile  Procfile.txt  README.md  package.json
server/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  playground.html  run.sh  server.cabal
server/app/: Main.hs
server/app/Resolvers/: Post.hs  Root.hs
server/migrations/2021-06-21-070017_create_posts/: down.sql  up.sql
server/src/: db.rs  graphql.rs  main.rs  playground.html  schema.rs
web/: package.json
web/public/: index.html  manifest.json
web/src/: 404.css  404.tsx  About.css  About.tsx  App.css  App.tsx  Home.css  Home.tsx  Post.css  Post.tsx  Posts.css  Posts.tsx  index.css
