cabal-version:      2.4
name:               server
version:            0.1.0.0
author:             Will Lane
maintainer:         williamlane923@gmail.com

extra-source-files: CHANGELOG.md

executable server
    main-is:          Main.hs

    other-modules:
        Resolvers.Root
        Resolvers.Post

    build-depends: 
        base
       , morpheus-graphql
       , bytestring
       , text
       , scotty
       , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
